# xmaslist

./: .bazel_fix_commands.json  BUILD.bazel  README.md  TODO  WORKSPACE  go.mod  go.sum  go_repositories.bzl  package.json  tsconfig.json
backend/: BUILD.bazel  auth.go  clock.go  envoy.yaml  main.go
backend/authservice/: BUILD.bazel  auth_service.go
backend/cmd/create_database/: BUILD.bazel  create_database.go
backend/cmd/db_util/: BUILD.bazel  command.go  db_util.go  user_lookup.go
backend/database/: BUILD.bazel  database.go  database_test.go  list.go  list_item.go  list_item_test.go  list_test.go  session.go  session_test.go  sql.go  sql_test.go  user.go  user_test.go
backend/database/dbutil/: BUILD.bazel  list.go  list_item.go
backend/database/testutil/: BUILD.bazel  db.go  list.go  testutil.go  user.go
backend/docker/: BUILD.bazel
backend/listservice/: BUILD.bazel  list_service.go  list_service_test.go
backend/loginservice/: BUILD.bazel  login_service.go
backend/request/: BUILD.bazel  request.go
backend/sessions/: BUILD.bazel  manager.go  manager_test.go  sessions.go
backend/userservice/: BUILD.bazel  user_service.go
backend/util/: BUILD.bazel  clock.go  convert.go
client/: BUILD.bazel  about.tsx  add_list_dialog.tsx  app.tsx  auth_model.ts  auth_storage.ts  banner.tsx  claim.tsx  create_list_dialog.tsx  create_list_item_dialog.tsx  echo.proto  edit_list.tsx  edit_list_dialog.tsx  edit_list_item.tsx  edit_list_item_dialog.tsx  home.tsx  index.html  index.tsx  index_prod.html  item_list.tsx  item_list_element.tsx  karma.conf.js  list_item.ts  list_item.tsx  list_item_component.tsx  list_list.tsx  list_list_element.tsx  list_model.ts  login.tsx  logout.tsx  model.ts  progress_button.tsx  progress_dialog.tsx  protected_route.tsx  rollup.config.js  terser_config.json  test.ts  tree_icon.tsx  tsconfig.json  user.ts  (+7 more)
client/old/: item_model.ts  list_item.ts  test.BUILD.bazel  wishlist.tsx
cmd/db_util/: BUILD.bazel  command.go  db_util.go  item_create.go  list_create.go  list_list.go  load.go  spec.go  user_add.go  user_create.go  user_list.go  user_lookup.go  util.go
db/: copy  create
db/schema/: BUILD.bazel  schema.go  schema.txt
docker/: base.yml  dev-compose.yml  dev.yml  docker-compose-dev  docker-compose-prod  envoy.yaml  make_session_secret_volume  prod.yml  session_secret.txt
frontend/: BUILD.bazel  main.go
frontend/docker/: BUILD.bazel
proto/: BUILD.bazel  auth_service.proto  list.proto  list_item.proto  list_service.proto  login_service.proto  tire.proto  user_info.proto  user_service.proto
server/: BUILD.bazel  main.go
server/docker/: BUILD.bazel
