load("@io_bazel_rules_go//go:def.bzl", "nogo")
load("@bazel_gazelle//:def.bzl", "gazelle")

GAZELLE_EXCLUDES = [
    "--exclude=client",
    "--exclude=node_modules",
]

# gazelle:prefix github.com/simmonmt/xmaslist
gazelle(
    name = "gazelle",
    command = "fix",
    extra_args = GAZELLE_EXCLUDES + [
        "--mode=diff",
    ],
)

gazelle(
    name = "gazelle_fix",
    command = "fix",
    extra_args = GAZELLE_EXCLUDES,
)

# Run as:
#   bazel run :gazelle_updaterepos -- -args github.com/whatever
gazelle(
    name = "gazelle_updaterepos",
    command = "update-repos",
    extra_args = [
        "--to_macro=go_repositories.bzl%go_repositories",
    ],
)

gazelle(name = "gazelle_cmd")

nogo(
    name = "nogo",
    vet = True,
    visibility = ["//visibility:public"],
)
