load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "backend",
    embed = [":backend_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "backend_lib",
    srcs = [
        "clock.go",
        "main.go",
    ],
    importpath = "github.com/simmonmt/xmaslist/backend",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/database",
        "//backend/sessions",
        "//backend/util",
        "//proto:user_service_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)
