load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "backend",
    embed = [":backend_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "backend_lib",
    srcs = [
        "auth.go",
        "clock.go",
        "main.go",
    ],
    importpath = "github.com/simmonmt/xmaslist/backend",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/database",
        "//backend/listservice",
        "//backend/loginservice",
        "//backend/request",
        "//backend/sessions",
        "//backend/util",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
    ],
)
