load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//http-server-spa:index.bzl", "http_server_spa")
load("@npm//sass:index.bzl", "sass")

sass(
    name = "styles",
    outs = ["styles.css"],
    args = [
        "$(execpath styles.scss)",
        "$(execpath styles.css)",
    ],
    data = ["styles.scss"],
)

PROTO_DEPS = [
    "//proto:user_service",
]

ts_project(
    srcs = glob([
        "*.ts",
        "*.tsx",
    ]),
    deps = PROTO_DEPS + [
        "@npm//@material-ui/core",
        "@npm//@material-ui/icons",
        "@npm//@types",
        "@npm//csstype",
        "@npm//google-protobuf",
        "@npm//lorem-ipsum",
        "@npm//react",
        "@npm//react-dom",
        "@npm//react-router-dom",
        "@npm//grpc-web",
    ],
)

rollup_bundle(
    name = "bundle",
    config_file = "rollup.config.js",
    entry_point = ":index.tsx",
    format = "iife",
    deps = PROTO_DEPS + [
        ":tsconfig",
        "@npm//:node_modules",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
    ],
)

http_server_spa(
    name = "server",
    data = [
        "index.html",
        ":bundle.js",
    ],
    templated_args = [
        "client",
        "index.html",
        "8080",
    ],
)
