load("@npm//@bazel/terser:index.bzl", "terser_minified")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library", "ts_project")
load("@npm//http-server-spa:index.bzl", "http_server_spa")
load("@npm//sass:index.bzl", "sass")

sass(
    name = "styles",
    outs = ["styles.css"],
    args = [
        "$(execpath styles.scss)",
        "$(execpath styles.css)",
    ],
    data = ["styles.scss"],
)

PROTO_DEPS = [
    "//proto:list_service",
    "//proto:auth_service",
    "//proto:user_info",
    "//proto:user_service",
]

ts_project(
    srcs = glob(
        include = [
            "*.ts",
            "*.tsx",
        ],
        exclude = [
            "*_test.ts",
        ],
    ),
    deps = PROTO_DEPS + [
        "@npm//@material-ui/core",
        "@npm//@material-ui/icons",
        "@npm//@material-ui/lab",
        "@npm//@material-ui/pickers",
        "@npm//@date-io/date-fns",
        "@npm//@types",
        "@npm//csstype",
        "@npm//google-protobuf",
        "@npm//lorem-ipsum",
        "@npm//react",
        "@npm//universal-cookie",
        "@npm//react-dom",
        "@npm//react-router-dom",
        "@npm//grpc-web",
    ],
)

ts_config(
    name = "tsconfig_main",
    src = "tsconfig.json",
)

rollup_bundle(
    name = "bundle",
    config_file = "rollup.config.js",
    entry_point = ":index.tsx",
    format = "iife",
    deps = PROTO_DEPS + [
        ":tsconfig",
        "@npm//:node_modules",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
    ],
)

terser_minified(
    name = "bundle.min",
    src = ":bundle",
    config_file = "terser_config.json",
    visibility = ["//visibility:public"],
)

exports_files([
    "index_prod.html",
])

http_server_spa(
    name = "server",
    data = [
        "index.html",
        ":bundle.js",
    ],
    templated_args = [
        "client",
        "index.html",
        "8083",
    ],
)

http_server_spa(
    name = "server_prod",
    data = [
        "index_prod.html",
        ":bundle.min",
    ],
    templated_args = [
        "client",
        "index_prod.html",
        "8083",
    ],
)
