load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "frontend_lib",
    srcs = ["main.go"],
    importpath = "github.com/simmonmt/xmaslist/frontend",
    visibility = ["//visibility:private"],
    deps = ["@com_github_roberthodgen_spa_server//:spa-server"],
)

go_binary(
    name = "frontend",
    embed = [":frontend_lib"],
    visibility = ["//visibility:public"],
)
