load("@npm//@bazel/labs:index.bzl", "ts_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "list_item_proto",
    srcs = ["list_item.proto"],
)

ts_proto_library(
    name = "list_item",
    proto = ":list_item_proto",
)

proto_library(
    name = "list_proto",
    srcs = ["list.proto"],
    deps = [ ":list_item_proto" ],
)

ts_proto_library(
    name = "list",
    proto = ":list_proto",
)
