load("@npm//@bazel/labs:index.bzl", "ts_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "list_item_proto",
    srcs = ["list_item.proto"],
)

ts_proto_library(
    name = "list_item",
    proto = ":list_item_proto",
)

proto_library(
    name = "list_proto",
    srcs = ["list.proto"],
    deps = [":list_item_proto"],
)

ts_proto_library(
    name = "list",
    proto = ":list_proto",
)

proto_library(
    name = "user_service_proto",
    srcs = ["user_service.proto"],
)

ts_proto_library(
    name = "user_service",
    proto = ":user_service_proto",
)

go_proto_library(
    name = "user_service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/simmonmt/xmaslist/proto/user_service",
    protos = [":user_service_proto"],
)
