load("@npm//@bazel/labs:index.bzl", "ts_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# gazelle:proto disable

package(
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "list_item_proto",
    srcs = ["list_item.proto"],
)

ts_proto_library(
    name = "list_item",
    proto = ":list_item_proto",
)

proto_library(
    name = "list_proto",
    srcs = ["list.proto"],
    deps = [":list_item_proto"],
)

ts_proto_library(
    name = "list",
    proto = ":list_proto",
)

proto_library(
    name = "list_service_proto",
    srcs = ["list_service.proto"],
    deps = [
        ":list_item_proto",
        ":list_proto",
    ],
)

ts_proto_library(
    name = "list_service",
    proto = ":list_service_proto",
)

go_proto_library(
    name = "list_service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/simmonmt/xmaslist/proto/list_service",
    protos = [
        ":list_item_proto",
        ":list_proto",
        ":list_service_proto",
    ],
)

proto_library(
    name = "login_service_proto",
    srcs = ["login_service.proto"],
    deps = [ ":user_info_proto" ],
)

ts_proto_library(
    name = "login_service",
    proto = ":login_service_proto",
)

go_proto_library(
    name = "login_service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/simmonmt/xmaslist/proto/login_service",
    protos = [":login_service_proto"],
    deps = [ ":user_info_go_proto" ],
)

proto_library(
    name = "user_info_proto",
    srcs = ["user_info.proto" ],
)

ts_proto_library(
    name = "user_info",
    proto = ":user_info_proto",
)

go_proto_library(
    name = "user_info_go_proto",
    importpath = "github.com/simmonmt/xmaslist/proto/user_info",
    protos = [":user_info_proto"],
)

proto_library(
    name = "user_service_proto",
    srcs = ["user_service.proto"],
    deps = [ ":user_info_proto" ],
)

ts_proto_library(
    name = "user_service",
    proto = ":user_service_proto",
)

go_proto_library(
    name = "user_service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/simmonmt/xmaslist/proto/user_service",
    protos = [":user_service_proto"],
    deps = [ ":user_info_go_proto" ],
)
