load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "database",
    srcs = ["database.go"],
    importpath = "github.com/simmonmt/xmaslist/backend/database",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "database_test",
    srcs = ["database_test.go"],
    embed = [
        ":database",
    ],
    deps = [
        "//db/schema",
    ],
)
