load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "database",
    srcs = [
        "database.go",
        "list.go",
        "list_item.go",
        "session.go",
        "sql.go",
        "user.go",
    ],
    importpath = "github.com/simmonmt/xmaslist/backend/database",
    visibility = ["//visibility:public"],
    deps = [
        "//db/schema",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "database_test",
    srcs = [
        "database_test.go",
        "list_item_test.go",
        "list_test.go",
        "session_test.go",
        "sql_test.go",
        "user_test.go",
    ],
    embed = [":database"],
    deps = [
        "//backend/database/dbutil",
        "//backend/database/testutil",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
