load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_image")

go_image(
    name = "backend_image",
    binary = "//backend",
)

# Run this target to create the Docker image with the right name and
# tag.
container_bundle(
    name = "docker",
    images = {
        "simmonmt/xmaslist/backend:latest": ":backend_image",
    },
)
