load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_image")

container_image(
    name = "backend_image",
    base = "@ubuntu_linux_amd64//image",
    entrypoint = ["/backend"],
    files = ["//backend"],
)

# Run this target to create the Docker image with the right name and
# tag.
container_bundle(
    name = "docker",
    images = {
        "simmonmt/xmaslist/backend:latest": ":backend_image",
    },
)
