load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sessions",
    srcs = ["manager.go"],
    importpath = "github.com/simmonmt/xmaslist/backend/sessions",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/database",
        "//backend/util",
    ],
)

go_test(
    name = "sessions_test",
    srcs = ["manager_test.go"],
    deps = [
        ":sessions",
        "//backend/database",
        "//backend/database/testutil",
        "//backend/util",
    ],
)
