load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "db_util_lib",
    srcs = [
        "command.go",
        "db_util.go",
        "item_create.go",
        "list_create.go",
        "list_list.go",
        "load.go",
        "spec.go",
        "user_create.go",
        "user_list.go",
        "user_lookup.go",
        "util.go",
    ],
    importpath = "github.com/simmonmt/xmaslist/cmd/db_util",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/database",
        "@com_github_google_subcommands//:subcommands",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_binary(
    name = "db_util",
    embed = [":db_util_lib"],
    visibility = ["//visibility:public"],
)
