load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_image")

go_image(
    name = "frontend_binary",
    binary = "//frontend",
)

container_image(
    name = "frontend_full",
    base = ":frontend_binary",
    cmd = [
        "--index_file=index_prod.html",
        "--serve_dir=/docroot",
        "--port=${PORT}",
    ],
    directory = "/docroot",
    files = [
        "//client:bundle.min",
        "//client:index_prod.html",
    ],
)

# Run this target to create the Docker image with the right name and
# tag.
container_bundle(
    name = "docker",
    images = {
        "simmonmt/xmaslist/frontend:latest": ":frontend_full",
    },
)
