load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "create_database_lib",
    srcs = ["create_database.go"],
    importpath = "github.com/simmonmt/xmaslist/backend/cmd/create_database",
    visibility = ["//visibility:private"],
    deps = ["//backend/database"],
)

go_binary(
    name = "create_database",
    embed = [":create_database_lib"],
    visibility = ["//visibility:public"],
)
