load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "db_util_lib",
    srcs = [
        "command.go",
        "db_util.go",
        "user_add.go",
        "user_lookup.go",
    ],
    importpath = "github.com/simmonmt/xmaslist/backend/cmd/db_util",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/database",
        "@com_github_google_subcommands//:subcommands",
    ],
)

go_binary(
    name = "db_util",
    embed = [":db_util_lib"],
    visibility = ["//visibility:public"],
)
