load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dbutil",
    srcs = [
        "list.go",
        "list_item.go",
    ],
    importpath = "github.com/simmonmt/xmaslist/backend/database/dbutil",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/database",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
