load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testutil",
    srcs = [
        "db.go",
        "list.go",
        "user.go",
    ],
    importpath = "github.com/simmonmt/xmaslist/backend/database/testutil",
    visibility = ["//visibility:public"],
    deps = ["//backend/database"],
)
